	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
11/16
	* Updated X.3 mob stats [Playtester]
	* Updated Kiel dungeon mob stats [Playtester]
	* Changed type of unimplemented cards to "Card" [Playtester]
11/15
	* Updated Odin Temple mob stats [Playtester]
	* Fixed Gonryun mob stats [Playtester]
	- also fixed Bacsojin and Chung E
11/13
	* Changed bAtk to bBaseAtk [Playtester]
11/10
	* Fully official GS/NJ Job Exp [Playtester]
	* Removed the inf2 = TRAP of FirePillar and Spider Web so they are blocked
	  by Land Protector. [Skotlex]
11/09
	* More accurate Max HP values for TK/SG/SL/GS/NJ [Playtester]
	- TK/SG/SL are official up to level 70
	* Reduced the check area of hermod to 3x3, you now have to literally stand
	  next to a warp for it to work. [Skotlex]
	* Official Weight and Max SP values for TK/SG/SL/GS/NJ [Playtester]
	- why were ours so far off the official ones?
11/08
	* Reduced Wand of Hermod's splash range (max distance from a portal) from 3 to
	  2. Should it really be 1? (that is, be so close that moving a single cell
	  warps you?) [Skotlex]
11/07
	* Kiel now summons 6 slaves instead of 5 [Playtester]
11/06
	* Added Bull's Eye 0.5 sec cast time [Skotlex]
	* Ganbantein's delay is now 2 secs. [Skotlex]
	* Removed the time2 value of NJ_NEN since it has no use. [Skotlex]
11/05
	* Raised the chance to get an OPB from an OPB [Playtester]
	* Official NJ/GS job exp for level 51+52 [Playtester]
11/03
	* Official X.4 MVP rewards [Playtester]
	* Official NJ/GS job exp up to joblevel 50 [Playtester]
	* Remaining official X.4 drop updates [Playtester]
	- updated related item names
11/02
	* Official Gunslinger/Ninja weapon drops [Playtester]